metadata/force-app/main/default/objects/CustomName_ZJqXa__c/CustomName_ZJqXa__c.object-meta.xml
<CustomObject>
    <description>Description_HtBSk</description>
    <label>CustomLabel_VzdIf</label>
    <nameField>
        <label>CustomLabel_VzdIf</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_VzdIfs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>