metadata/force-app/main/default/objects/CustomName_ZJqXa__c/fields/CustomField_UyvtQ__c.field-meta.xml
<CustomField>
    <fullName>CustomField_UyvtQ__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldUmkaI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>